Revert "Fix alignment of language level bars on stats page"
This reverts commit 53d0849c0cd16865838b63d9921f682e385ab312.

--- a/webroot/css/stats/users_languages.css
+++ b/webroot/css/stats/users_languages.css
@@ -42,9 +42,6 @@
 .usersLanguagesLegend .languageLevel .level {
     background-color: #06A;
     height: 100%;
-    font-size: 12px;
-    float: left;
-    position: relative;
 }
 
 .usersLanguagesStats .languageLevel .unknownLevel,
